# microseh

./: Cargo.toml  README.md  build.rs
examples/: functions.rs  minimal.rs  raii.rs  registers.rs
src/: exception.rs  lib.rs  stub.c
