[package]
name = "microseh"
version = "1.1.1"
authors = ["sonodima"]
edition = "2021"

description = "Structured Exception Handling (SEH) for Rust"
homepage = "https://github.com/sonodima/microseh"
repository = "https://github.com/sonodima/microseh"
readme = "README.md"
license = "MIT"

keywords = ["seh", "windows", "hardware", "exception", "handler"]
categories = ["os"]


[build-dependencies]
cc = "1.1"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
